2002-09-06  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Setting Output Variables): Clarify what
	precious variables are.
	Suggested by Pontus Skoeld.

2002-09-05  Akim Demaille  <akim@epita.fr>

	* bin/Makefile.am (autoconf, autoheader, autoreconf, autoupdate)
	(ifnames, autoscan, autom4te): Since we don't only depend on
	configure.ac variables (such as VERSION etc.), but also on prefix
	and so forth, depend on Makefile, not configure.ac.
	Reported by Alexandre Duret-Lutz.
	* doc/autoconf.texi (Installation Directory Variables): Adjust.

2002-09-05  Kevin Ryde  <user42@zip.com.au>

	* autoconf.texi (Limitations of Make): HP-UX trailing backslashes
	doesn't seem to be confined to ia64, just say "some versions".

2002-09-04  Akim Demaille  <akim@epita.fr>

	* Makefile.am, doc/Makefile.am: Remove pdf targets, handled by
	Automake 1.6c.
	* Makefile.am (maintainer-clean-local): Remove.
	(MAINTAINERCLEANFILES): Remove COPYING.

2002-09-03  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Configuration Commands): Remove obsolete
	example for AC_CONFIG_COMMANDS_PRE.  Problem reported by Marcus
	Brinkmann.

2002-09-03  Akim Demaille  <akim@epita.fr>

	* configure.ac: Bump to 2.53d.
	* Makefile.am (AUTOMAKE_OPTIONS): Require 1.6c, i.e., CVS Automake
	as of today, on Automake's team suggestion.

2002-09-03  Akim Demaille  <akim@epita.fr>

	Version 2.53c.

2002-09-02  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (parse_args): Don't honor AUTOM4TE_PATH and
	SITE_MACRO_DIR.
	* configure.ac: Disable SITE_MACRO_DIR.

2002-09-02  Jim Meyering  <meyering@lucent.com>

	* doc/autoconf.texi (AC_SYS_POSIX_TERMIOS): Reflect renaming: s/am/ac/,
	i.e., change am_cv_sys_posix_termios to ac_cv_sys_posix_termios.
	Also, tweak grammar: s/make sure to/be sure to/.

2002-09-02  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Limitations of Builtins): Explain why logical
	directory names are generally preferable to physical names.
