@@ -1,3 +1,13 @@
+2002-09-09  Akim Demaille  <akim@epita.fr>
+
+	* lib/autoconf/functions.m4 (AC_FUNC_GETLOADAVG): Use $srcdir when
+	looking for a replacement file.
+	* lib/autoconf/general.m4 (AC_CHECK_DECLS): Check that the
+	directory is relative.
+	* doc/autoconf.texi (Generic Functions): Clarify the replacement
+	directory definition.
+	Reported by Andreas Schwab and Jim Meyering.
+
 2002-09-06  Akim Demaille  <akim@epita.fr>
 
 	* doc/autoconf.texi (Setting Output Variables): Clarify what
